--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,17 @@
-aiohttp
-aiohttp_jinja2
-aiohttp_session[secure]
+aiohttp==3.6.2
+aiohttp-jinja2==1.2.0
+aiohttp-session==2.9.0
+aiohttp-spotify==0.0.2
+async-timeout==3.0.1
+attrs==19.3.0
+cffi==1.14.0
+chardet==3.0.4
+cryptography==2.8
+idna==2.9
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+multidict==4.7.5
+pycparser==2.20
+six==1.14.0
+toml==0.10.0
+yarl==1.4.2
