switching db backenf

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.6.2
 aiohttp-jinja2==1.2.0
 aiohttp-session==2.9.0
 aiohttp-spotify==0.0.2
+aiosqlite==0.11.0
 async-timeout==3.0.1
 attrs==19.3.0
 cffi==1.14.0
@@ -12,6 +13,8 @@ Jinja2==2.11.1
 MarkupSafe==1.1.1
 multidict==4.7.5
 pycparser==2.20
+python-engineio==3.12.1
+python-socketio==4.5.1
 six==1.14.0
 toml==0.10.0
 yarl==1.4.2
