--- a/package.json
+++ b/package.json
@@ -12,16 +12,24 @@
   "homepage": "https://github.com/dfm/spotify-party#readme",
   "private": true,
   "scripts": {
-    "build": "npx webpack"
+    "watch": "npx webpack --config webpack.dev.js --watch",
+    "dev": "npx webpack --config webpack.dev.js",
+    "prod": "npx webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "Dan F-M <foreman.mackey@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.2",
     "html-webpack-plugin": "^4.0.2",
     "prettier": "^2.0.2",
+    "style-loader": "^1.1.3",
+    "ts-loader": "^6.2.2",
+    "typescript": "^3.8.3",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {}
 }
