--- a/package.json
+++ b/package.json
@@ -20,10 +20,17 @@
   "author": "Dan F-M <foreman.mackey@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^16.9.27",
+    "@types/react-dom": "^16.9.5",
+    "@types/spotify-web-playback-sdk": "^0.1.7",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-to-clipboard": "^3.3.1",
     "css-loader": "^3.4.2",
-    "html-webpack-plugin": "^4.0.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
