--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
+    "@types/socket.io-client": "^1.4.32",
     "@types/spotify-web-playback-sdk": "^0.1.7",
     "clean-webpack-plugin": "^3.0.0",
     "copy-to-clipboard": "^3.3.1",
@@ -31,6 +32,8 @@
     "prettier": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "socket.io-client": "^2.3.0",
+    "socket.io-json-parser": "^2.1.0",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
