--- a/config/template.toml
+++ b/config/template.toml
@@ -1,5 +1,6 @@
 spotify_client_id = "YOUR CLIENT ID"
 spotify_client_secret = "YOUR CLIENT SECRET"
 spotify_redirect_uri = "YOUR CALLBACK URI"
+base_url = "THE URL OF YOUR SITE"
 database_filename = "/path/to/database.db"
 port = 5000
