--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/spotify-web-playback-sdk": "^0.1.7",
     "clean-webpack-plugin": "^3.0.0",
     "copy-to-clipboard": "^3.3.1",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
